--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <header>
+      <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    </header>
 
     <main>
-      <!-- Loads the specified .html file -->
       <load src="./partials/vite-promo.html" />
       <load src="./partials/badges.html" />
     </main>
 
-    <load src="./partials/footer.html" />
-
-    <script type="module" src="./main.js"></script>
+    <footer>
+      <load src="./partials/footer.html" />
+    </footer>
   </body>
 </html>
