--- a/src/page-2.html
+++ b/src/page-2.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load
-      src="./partials/header.html"
-      icon-path="./img/sprite.svg#logo"
-      highlight-act="active"
-    />
+    <header>
+      <load
+        src="./partials/header.html"
+        icon-path="./img/sprite.svg#logo"
+        highlight-act="active"
+      />
+    </header>
 
     <main>
       <div class="container">
@@ -23,6 +25,10 @@
       </div>
     </main>
 
-    <load src="./partials/footer.html" />
+    <footer>
+      <load src="./partials/footer.html" />
+    </footer>
+
+    <script src="./js/01-timer.js"></script>
   </body>
 </html>
