--- a/src/page-3.html
+++ b/src/page-3.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load
-      src="./partials/header.html"
-      icon-path="./img/sprite.svg#logo"
-      highlight-curr="active"
-    />
+    <header>
+      <load
+        src="./partials/header.html"
+        icon-path="./img/sprite.svg#logo"
+        highlight-curr="active"
+      />
+    </header>
 
     <main>
       <div class="container">
