--- a/src/page-2.html
+++ b/src/page-2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page 2</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/page-2.css" />
   </head>
   <body>
     <header>
@@ -21,6 +22,31 @@
         <h1 class="main-title">
           <span class="main-title-gradient">Welcome</span> to page 2
         </h1>
+
+        <div class="timer-container">
+          <input type="datetime-local" id="datetime-picker" />
+          <button type="button" data-start>Start</button>
+
+          <div class="timer">
+            <div class="field">
+              <span class="value" data-days>00</span>
+              <span class="label">Days</span>
+            </div>
+            <div class="field">
+              <span class="value" data-hours>00</span>
+              <span class="label">Hours</span>
+            </div>
+            <div class="field">
+              <span class="value" data-minutes>00</span>
+              <span class="label">Minutes</span>
+            </div>
+            <div class="field">
+              <span class="value" data-seconds>00</span>
+              <span class="label">Seconds</span>
+            </div>
+          </div>
+        </div>
+
         <load src="./partials/back-link.html" />
       </div>
     </main>
@@ -29,6 +55,6 @@
       <load src="./partials/footer.html" />
     </footer>
 
-    <script src="./js/01-timer.js"></script>
+    <script type="module" src="./js/01-timer.js"></script>
   </body>
 </html>
