--- a/src/page-3.html
+++ b/src/page-3.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page 3</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/page-3.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css"
+    />
   </head>
   <body>
     <header>
@@ -21,10 +26,36 @@
         <h1 class="main-title">
           <span class="main-title-gradient">Welcome</span> to page 3
         </h1>
+
+        <div class="snackbar-container">
+          <form class="form">
+            <label>
+              Delay (ms)
+              <input type="number" name="delay" required />
+            </label>
+
+            <fieldset>
+              <legend>State</legend>
+              <label>
+                <input type="radio" name="state" value="fulfilled" required />
+                Fulfilled
+              </label>
+              <label>
+                <input type="radio" name="state" value="rejected" required />
+                Rejected
+              </label>
+            </fieldset>
+
+            <button type="submit">Create notification</button>
+          </form>
+        </div>
+
         <load src="./partials/back-link.html" />
       </div>
     </main>
 
     <load src="./partials/footer.html" />
+
+    <script type="module" src="./js/02-snackbar.js"></script>
   </body>
 </html>
